# cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  architecture.txt  daemon_analysis_results.md  host_socket_impl.md  implementation_plan.md  pending_features.md  plugin_auth.md  plugin_author_inst.md  prd.md  prop_structure.txt  rustfmt.toml
analysis/: report_03-15.md
assets/: agent_metadata.yaml  agent_template.md
src/: audit.rs  cli.rs  config.rs  error.rs  ipc.rs  main.rs  signing.rs
src/agents/: add.rs  clean.rs  cmd.rs  metadata.rs  mod.rs  scaffold.rs
src/auth/: github.rs  keychain.rs  m365.rs  mod.rs
src/core/: audit.rs  cache.rs  ipc_proto.rs  mod.rs  ui.rs
src/daemon/: engine.rs  handler.rs  js.rs  mod.rs  network.rs  nonce.rs  proxy.rs  server.rs
src/github/: auth.rs  mod.rs  pulls.rs  repos.rs
src/mcp/: build.rs  craft_config.rs  install.rs  list.rs  mod.rs  new.rs  remove.rs  run.rs  sign.rs  update.rs
src/mcp/plugin_lang/: mod.rs  python.rs
src/proxy/: mod.rs  start.rs  status.rs  stop.rs
