[package]
name = "craft"
version = "0.1.0"
edition = "2024"
description = "Custom MCP CLI host — single binary, dual-mode (client + daemon)"
license = "MIT"

[[bin]]
name = "craft"
path = "src/main.rs"

# ─── Features ─────────────────────────────────────────────────────────────────
# Build with `--features daemon` to include the execution engines.
# The default (client-only) build excludes wasmtime + rquickjs to keep
# the binary small. The release binary is built with `daemon` enabled.
[features]
default = []
daemon  = [
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:wasmtime-wasi-http",
    "dep:rquickjs",
]

# ─── Dependencies ─────────────────────────────────────────────────────────────
[dependencies]

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# Async runtime
tokio         = { version = "1", features = ["full"] }
tokio-util    = { version = "0.7", features = ["codec"] }

# IPC (Unix domain sockets + Windows named pipes)
interprocess  = { version = "2", features = ["tokio"] }

# Error handling
anyhow  = "1"
thiserror = "2.0.18"

# Config + serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.9.8"

# Paths / filesystem
dirs = "6.0.0"

# OS keychain
keyring = "3"

# Masked credential input
rpassword = "7"

# Hashing (BLAKE3 for manifest integrity)
blake3 = "1"

# HTTP client (rustls by default in 0.13 — no OpenSSL dependency)
reqwest = "0.13.2"

# WebSocket proxy
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

# GitHub API
octocrab = "0.49.5"

# OAuth2 (M365 PKCE flow)
oauth2 = "5.0.0"

# Progress / UX
indicatif = "0.18.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography / nonce generation
rand = "0.10.0"

# OS signal / process inspection
libc = "0.2"

# Structured logging
tracing         = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Daemon-only: WASM runtime (feature-gated)
wasmtime       = { version = "42.0.1", optional = true, features = ["cranelift", "component-model", "async"] }
wasmtime-wasi  = { version = "42.0.1", optional = true }
wasmtime-wasi-http = { version = "42.0.1", optional = true }

# Daemon-only: JS engine (feature-gated)
# `futures` feature exposes AsyncRuntime + AsyncContext (see docs.rs/rquickjs)
rquickjs = { version = "0.11.0", optional = true, features = ["futures", "loader", "parallel", "classes", "macro"] }
http-body-util = "0.1.3"
tungstenite = "0.28.0"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
futures-util = "0.3.32"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
console    = "0.16.3"
dialoguer  = "0.12.0"
serde_yml = "0.0.12"
rust-embed = "8.11.0"
aho-corasick = "1"

# ─── Dev dependencies ─────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation"] }

# ─── Release profile ──────────────────────────────────────────────────────────
[profile.release]
opt-level     = "z"   # optimize for size
lto           = true
codegen-units = 1     # max size reduction (slow compile; worth it for release)
panic         = "abort"
strip         = true

